apps/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: default
  labels:
    app: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - name: vaultwarden
        image: ghcr.io/dani-garcia/vaultwarden:1.30.1
        volumeMounts:
        - mountPath: /data
          name: data
        ports:
        - containerPort: 80
          name: http
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vaultwarden-pvc
