apps/vaultwarden/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`vault.azollerstuff.xyz`)
    kind: Rule
    middlewares:
      - name: headers
    services:
    - name: vaultwarden
      port: 80
  tls:
    certResolver: letsencrypt
    domains:
    - main: azollerstuff.xyz
      sans:
      - '*.azollerstuff.xyz'
